# full-stack-fastapi-template

./: .env.local.example  .env.production  .env.test  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/agents/: __init__.py  graph.py  schemas.py  service.py  tools.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 3418f9e69834_add_agentrun_and_agentevaluation_tables.py  97e72db5cb77_add_thread_id_column_to_agentrun_table.py
backend/app/api/: main.py
backend/app/api/routes/: agent.py
backend/app/core/: config.py  db.py  logging.py  rate_limit.py  telemetry.py
backend/app/evaluation/: __init__.py  cli.py  evaluator.py  schemas.py
backend/app/evaluation/metrics/: __init__.py
backend/app/middleware/: __init__.py  correlation.py
backend/scripts/: test.sh
backend/tests/: conftest.py
backend/tests/api/: test_correlation.py
backend/tests/api/routes/: test_agent.py
backend/tests/e2e/: README.md  __init__.py  test_agent_flow.py
backend/tests/unit/: test_agent_graph.py  test_agent_migration.py  test_agent_models_crud.py  test_agent_service.py  test_agent_tools.py  test_agent_tools_json_validation.py  test_evaluation.py  test_prometheus_metrics.py  test_rate_limit.py  test_telemetry.py
deployment/grafana/dashboards/: fastapi-overview.json
deployment/prometheus/: prometheus.yml
docs/: PERFORMANCE.md  PERFORMANCE_TESTING_GUIDE.md
docs/architecture/: llm-agents.md
frontend/: .env  package-lock.json  package.json  vite.config.ts
frontend/src/: vite-env.d.ts
frontend/src/components/Common/: SidebarItems.tsx
frontend/src/config/: README.md  features.ts
frontend/src/features/agent/: README.md  api.ts  context.tsx  index.ts  types.ts
frontend/src/features/agent/__tests__/: AgentChat.test.tsx  AgentHistory.test.tsx  context.test.tsx
frontend/src/features/agent/components/: AgentChat.tsx  AgentHistory.tsx  ChatInput.tsx  ChatLoadingIndicator.tsx  ChatMessage.tsx  README.md  index.ts
frontend/src/hooks/: useAgent.ts
frontend/src/test/: setup.ts  utils.tsx
frontend/src/test/mocks/: handlers.ts  server.ts
frontend/tests/: config.ts
scripts/: monitor_resources.py  performance_test.py  run_performance_tests.sh  test_e2e.sh
